Invoke http request

--- a/s3lambda/package.json
+++ b/s3lambda/package.json
@@ -9,6 +9,8 @@
   "author": "Jana",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.463.0"
+    "aws-sdk": "^2.463.0",
+    "express": "^4.17.1",
+    "request": "^2.88.0"
   }
 }
