--- a/express-react/package.json
+++ b/express-react/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.4.0"
+    "mongodb": "^3.4.0",
+    "mongoose": "^5.8.1"
   }
 }
