--- a/express-react/package.json
+++ b/express-react/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1"
   }
