--- a/express-react/package.json
+++ b/express-react/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "joi": "^14.3.1",
     "mongodb": "^3.4.0",
-    "mongoose": "^5.8.1"
+    "mongoose": "^5.8.1",
+    "pg": "^7.15.0"
   }
 }
