--- a/nodeWithTs/package.json
+++ b/nodeWithTs/package.json
@@ -4,7 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
