--- a/nodeWithTs/package.json
+++ b/nodeWithTs/package.json
@@ -13,6 +13,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "helmet": "^5.1.0"
   }
 }
